syntax = "proto3";

import "github.com/opsee/protobuf/proto/google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/opsee/protobuf/opseeproto/opsee.proto";
import "github.com/opsee/basic/schema/aws/autoscaling/types.proto";
import "github.com/opsee/basic/schema/aws/ec2/types.proto";
import "github.com/opsee/basic/schema/aws/elb/types.proto";
import "github.com/opsee/basic/schema/aws/rds/types.proto";

package opsee;

option java_package = "co.opsee.proto";
option java_multiple_files = true;
option java_outer_classname = "AWSDataProto";

option go_package = "schema";
option (opseeproto.graphql) = true;


// An Opsee group target representing an AWS group resource.
message Group {

  // The AWS group identifier.
  string id = 1;

  string customer_id = 2;
  
  // The type of AWS resource.
  string type = 3;

  // The raw AWS resource data.
  oneof resource {

    // ec2.SecurityGroup
    aws.ec2.SecurityGroup security_group = 101;

    // elb.LoadBalancer
    aws.elb.LoadBalancerDescription load_balancer = 102;

    // autoscaling.Group
    aws.autoscaling.Group autoscaling_group = 103;
  }

  // The last seen number of instances in the group target. This value is cached, so it may not be consistent.
  int32 instance_count = 4;

  // The last seen instances in the group target. This value is cached, so it may not be consistent.
  repeated Instance instances = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}


// An Opsee instance target representing an AWS instance resource.
message Instance {

  // The AWS instance identifier.
  string id = 1;

  string customer_id = 2;
  
  // The type of AWS resource.
  string type = 3;

  // The raw AWS resource data.
  oneof resource {
  
    // ec2.Instance
    aws.ec2.Instance instance = 101;

    // rds.DBInstance
    aws.rds.DBInstance db_instance = 102;
  }

  // The last seen group targets that the instance belongs to. This value is cached, so it may not be consistent.
  repeated Group groups = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
